Update Trang đăng ký.html

--- a/Trang đăng ký.html
+++ b/Trang đăng ký.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -24,10 +24,10 @@
                 Mật khẩu:  <input type="text" name="Mật khẩu" />
                 <br />
                 Xác nhận mật khẩu: <input type="text" />
-            </b> 
- <button name="button" type="button"> <a href="http://localhost:52369/BT1.html"><b>Đăng ký</a></button>
+            </b>
+            <button name="button" type="button"> <a href="Home.html"><b>Đăng ký</a></button>
 
-</form></p>
+    </form></p>
 
 </body>
 </html>
